--- a/notebooks/Figures_for_Boolean_DSGRN.ipynb
+++ b/notebooks/Figures_for_Boolean_DSGRN.ipynb
@@ -2336,7 +2336,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2350,7 +2350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
